objects/Wave_Priority__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wave_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_season__c</fullName>
        <formula>TEXT( Season__r.Active_season__c )</formula>
        <label>Active season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Wave_Name__c</fullName>
        <label>Actual Wave Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BADHAV 4</fullName>
                </value>
                <value>
                    <fullName>BADHAV 5</fullName>
                </value>
                <value>
                    <fullName>BADHAV 6</fullName>
                </value>
                <value>
                    <fullName>BADHAV 7</fullName>
                </value>
                <value>
                    <fullName>BADHAV 8</fullName>
                </value>
                <value>
                    <fullName>BADHAV 9</fullName>
                </value>
                <value>
                    <fullName>BBG 10</fullName>
                </value>
                <value>
                    <fullName>BBG 11</fullName>
                </value>
                <value>
                    <fullName>BBG 3</fullName>
                </value>
                <value>
                    <fullName>BBG 4</fullName>
                </value>
                <value>
                    <fullName>BBG 5</fullName>
                </value>
                <value>
                    <fullName>BBG 6</fullName>
                </value>
                <value>
                    <fullName>BBG 7</fullName>
                </value>
                <value>
                    <fullName>BBG 8</fullName>
                </value>
                <value>
                    <fullName>BBG 9</fullName>
                </value>
                <value>
                    <fullName>BEN 10</fullName>
                </value>
                <value>
                    <fullName>BEN 11</fullName>
                </value>
                <value>
                    <fullName>BEN 3</fullName>
                </value>
                <value>
                    <fullName>BEN 4</fullName>
                </value>
                <value>
                    <fullName>BEN 5</fullName>
                </value>
                <value>
                    <fullName>BEN 6</fullName>
                </value>
                <value>
                    <fullName>BEN 7</fullName>
                </value>
                <value>
                    <fullName>BEN 8</fullName>
                </value>
                <value>
                    <fullName>BEN 9</fullName>
                </value>
                <value>
                    <fullName>BlackCountry 1</fullName>
                </value>
                <value>
                    <fullName>BlackCountry 10</fullName>
                </value>
                <value>
                    <fullName>BlackCountry 11</fullName>
                </value>
                <value>
                    <fullName>BlackCountry 12</fullName>
                </value>
                <value>
                    <fullName>BlackCountry 2</fullName>
                </value>
                <value>
                    <fullName>BlackCountry 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_girl_wave__c</fullName>
        <description>Pulls through the All Girl Wave? value from Wave</description>
        <formula>TEXT( Wave__r.All_Girl_Wave__c )</formula>
        <label>All girl wave?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_display_text_online__c</fullName>
        <formula>Wave__r.Location_display_text_online__c</formula>
        <label>Location display text online</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oldest_date_of_birth_possible__c</fullName>
        <description>Oldest date of birth possible to go on the particular wave</description>
        <formula>Wave__r.Oldest_date_of_birth_possible__c</formula>
        <label>Oldest date of birth possible</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part1_KO_Date__c</fullName>
        <description>KO day for Part 1 (Personal Challenge, Get Active)</description>
        <formula>Wave__r.PC_KO_day__c</formula>
        <label>Part1 KO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part3_end_date__c</fullName>
        <description>Used on OBS tile</description>
        <formula>IF( 
ISPICKVAL(Wave__r.Pilot__c, &quot;NCS Sequential RCA&quot;), 
Wave__r.RCD_end_date__c,  
Wave__r.RCA_End_Date__c
)</formula>
        <label>Part3 end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season_SF_ID__c</fullName>
        <formula>Season__r.Id</formula>
        <label>Season SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Season the wave priority is in</description>
        <label>Season</label>
        <referenceTo>Season__c</referenceTo>
        <relationshipLabel>Wave Priorities</relationshipLabel>
        <relationshipName>Wave_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>September_RCA_weekends__c</fullName>
        <description>Pulls through the value of September RCA weekends from Wave</description>
        <formula>TEXT( Wave__r.September_RCA_weekends__c )</formula>
        <inlineHelpText>Pulls through the value of September RCA weekends from Wave</inlineHelpText>
        <label>September RCA weekends</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Location__c</fullName>
        <label>Wave Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn with Darwen</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Coventry and North Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Epsom and Ewell</fullName>
                </value>
                <value>
                    <fullName>Godalming</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith and Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington and Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_Name__c</fullName>
        <label>Wave Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wave 1 (23rd June)</fullName>
                </value>
                <value>
                    <fullName>Wave 2 (27th June)</fullName>
                </value>
                <value>
                    <fullName>Wave 3 (3rd July)</fullName>
                </value>
                <value>
                    <fullName>Wave 4 (8th July)</fullName>
                </value>
                <value>
                    <fullName>Wave 5 (14th July)</fullName>
                </value>
                <value>
                    <fullName>Wave 6 (18th July)</fullName>
                </value>
                <value>
                    <fullName>Wave 7 (24th July)</fullName>
                </value>
                <value>
                    <fullName>Wave 8 (29th July)</fullName>
                </value>
                <value>
                    <fullName>Wave 9 (4th August)</fullName>
                </value>
                <value>
                    <fullName>Wave 10 (8th August)</fullName>
                </value>
                <value>
                    <fullName>Wave 11 (13th August)</fullName>
                </value>
                <value>
                    <fullName>Wave 12 (17th August)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_Number__c</fullName>
        <formula>Wave__r.Wave_number__c</formula>
        <label>Wave Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Record_Type__c</fullName>
        <label>Wave Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2012A</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2013A</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_SF_ID__c</fullName>
        <formula>Wave__r.Id</formula>
        <label>Wave SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wave</label>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>Wave Priorities</relationshipLabel>
        <relationshipName>Wave_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave_dates_description_long_text__c</fullName>
        <description>Pulled through from Wave object.  For OBS</description>
        <formula>Wave__r.Wave_dates_description__c</formula>
        <inlineHelpText>Pulled through from Wave object.  For OBS</inlineHelpText>
        <label>Wave dates description long text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_name_value__c</fullName>
        <description>Wave name as a text field</description>
        <formula>Wave__r.Name</formula>
        <label>Wave name value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_schedule__c</fullName>
        <description>Pulls through Wave Schedule from Wave object.  Used to display programme dates and information on OBS</description>
        <formula>Wave__r.Wave_schedule__c</formula>
        <inlineHelpText>Pulls through Wave Schedule from Wave object.  Used to display programme dates and information on OBS</inlineHelpText>
        <label>Wave schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_display_status__c</fullName>
        <description>Pulls through the value of Website display status from Wave</description>
        <formula>TEXT( Wave__r.Website_display_status__c )</formula>
        <label>Website display status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youngest_date_of_birth__c</fullName>
        <description>Youngest date of birth possible for this wave priority value</description>
        <formula>Season__r.Youngest_date_of_birth__c</formula>
        <label>Youngest date of birth</label>
        <type>Date</type>
    </fields>
    <label>Wave Priority</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Priority__c</columns>
        <columns>Wave_dates_description_long_text__c</columns>
        <columns>Wave_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>summer 2016</value>
        </filters>
        <filters>
            <field>Wave_Location__c</field>
            <operation>equals</operation>
            <value>Redbridge</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Wave Priorities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wave Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>